[package]
name = "rust_caching"
version = "0.2.0"
edition = "2018"
authors = ["Ifaz Ahmed"]
readme = "README.md"
description = "A simple safe Rust library to cache functions (or sections of code) in memory"
homepage = "https://github.com/Cyclip/rust_caching"
repository = "https://github.com/Cyclip/rust_caching"
license = "MIT"
keywords = ["cache", "caching", "memoization", "lru"]
categories = ["algorithms", "caching"]
exclude = [
    "tests/*"
]

[lib]
name = "rust_caching"

[dependencies]
walkdir = "2"
bincode = "1.3.3"